--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </tr>
         </table>
         <hr>
-        <a href="Contact.html">Contact site author</a>
+        <a href="contact.html">Contact site author</a>
 
 
     </body>
